--- a/src/views/index.html
+++ b/src/views/index.html
@@ -19,6 +19,7 @@
 <body>
     <!-- Lo unico que necesitamos en el HTML es importar el script principal de nuestra pagina -->
     <script defer src="js/application.js" type="module"></script>
+    <script src="./socket.io/socket.io.js" charset="utf-8"></script>
     <script defer src="js/pantalla.js" type="text/javascript"></script>
 </body>
 </html>
