--- a/src/public/css/score.css
+++ b/src/public/css/score.css
@@ -6,79 +6,81 @@
 
 h1 {
     font-family: 'Silkscreen', cursive;
-    color:#fff;
+    color: #fff;
     display: flex;
     font-size: 35px;
-    text-shadow:0 0 20px  #fff;
+    text-shadow: 0 0 20px #fff;
 }
 
 .content {
-    display:none;
+    display: none;
 }
 
 /*Loader*/
-.loader-wrapper h5{
+.loader-wrapper h5 {
     position: absolute;
-    top:70%;
-    right:48%;
-     color:#fff;
-     display: flex;
-     font-size: 20px;
-     text-shadow:0 0 20px  #A29CD7;
+    top: 70%;
+    right: 48%;
+    color: #fff;
+    display: flex;
+    font-size: 20px;
+    text-shadow: 0 0 20px #A29CD7;
     font-family: 'Silkscreen', cursive;
     animation: opatext 5s linear infinite;
 }
 
-@keyframes opatext{
+@keyframes opatext {
     0% {
         opacity: 0;
     }
+
     100% {
         opacity: 1;
     }
 }
 
-.loader-wrapper .loader{
+.loader-wrapper .loader {
     position: fixed;
-    right:50%;
-    top:50%;
-    width:100px;
-    height:100px;
+    right: 50%;
+    top: 50%;
+    width: 100px;
+    height: 100px;
 }
 
-.loader-wrapper .loader span{
+.loader-wrapper .loader span {
     position: absolute;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     transform: rotate(calc(18deg * var(--i)));
 }
 
-.loader-wrapper .loader span::before{
-    content:'';
+.loader-wrapper .loader span::before {
+    content: '';
     position: absolute;
-    top:0;
-    left:0;
-    width:15px;
-    height:15px;
+    top: 0;
+    left: 0;
+    width: 15px;
+    height: 15px;
     border-radius: 50%;
     background: rgb(112, 79, 201);
     box-shadow: 0 0 10px rgb(112, 79, 201),
-                0 0 20px rgb(112, 79, 201),
-                0 0 40px rgb(112, 79, 201),
-                0 0 60px rgb(112, 79, 201),
-                0 0 80px rgb(112, 79, 201),
-                0 0 100px rgb(112, 79, 201);
+        0 0 20px rgb(112, 79, 201),
+        0 0 40px rgb(112, 79, 201),
+        0 0 60px rgb(112, 79, 201),
+        0 0 80px rgb(112, 79, 201),
+        0 0 100px rgb(112, 79, 201);
     animation: animate 2s linear infinite;
     animation-delay: calc(0.1s * var(--i));
 }
 
 @keyframes animate {
-    0%{
+    0% {
         transform: scale(1);
     }
-    100%{
+
+    100% {
         transform: scale(0);
     }
 }
@@ -86,14 +88,14 @@ h1 {
 /*-----------------------------------------------------------------------------------*/
 /*tabla*/
 
-table{
-    width:70%;
+table {
+    width: 70%;
     font-size: 1.5rem;
-    right:15%;
-    top:25%;
-    height:fit-content;
+    right: 15%;
+    top: 25%;
+    height: fit-content;
     justify-content: center;
-    border:1px solid #fff;
+    border: 1px solid #fff;
     border-collapse: collapse;
     align-items: center;
     text-align: center;
@@ -101,18 +103,19 @@ table{
     margin-right: auto;
 }
 
-th,td{
-    color:#fff;
+th,
+td {
+    color: #fff;
     font-family: 'Silkscreen', cursive;
     padding: 1rem;
 }
 
-tr{
+tr {
     background: rgb(28, 22, 46);
-    color:#fff;
+    color: #fff;
 }
 
-tbody tr:hover{
+tbody tr:hover {
     color: #fff;
     background: rgb(53, 42, 87);
 }
@@ -129,52 +132,52 @@ tbody tr:hover{
     letter-spacing: 0.1em;
     padding: 10px 30px;
 }
-     
+
 #btn-return::before {
     content: '';
     inset: 2px;
     background: #27282c;
 }
-     
-#btn-return span{
+
+#btn-return span {
     z-index: 1;
 }
-     
+
 #btn-return i {
-    inset:0;
+    inset: 0;
     display: block;
 }
-     
+
 #btn-return #regreso::before {
-    content:'';
-    position:absolute;
-    top:-3%;
+    content: '';
+    position: absolute;
+    top: -3%;
     left: 93%;
     width: 10px;
     height: 5px;
     background: #2c2727;
     transform: translateX(-50%) skewX(325deg);
-    transition:0.5s;
+    transition: 0.5s;
 }
-     
-#btn-return:hover #regreso::before{
-    width:20px; 
-    left:20%;
+
+#btn-return:hover #regreso::before {
+    width: 20px;
+    left: 20%;
 }
-     
-#btn-return #regreso::after{
-    content:'';
-    position:absolute;
-    top:97%;
+
+#btn-return #regreso::after {
+    content: '';
+    position: absolute;
+    top: 97%;
     left: 30%;
     width: 10px;
     height: 5px;
     background: #2c2727;
     transform: translateX(-50%) skewX(325deg);
-    transition:0.5s;
+    transition: 0.5s;
 }
-     
-#btn-return:hover #regreso::after{
-    width:20px;
-    left:80%;
+
+#btn-return:hover #regreso::after {
+    width: 20px;
+    left: 80%;
 }
