--- a/src/app/views/configuration.html
+++ b/src/app/views/configuration.html
@@ -35,7 +35,7 @@
 
     <!--Btn Brillo-->
     <div class="mx-5 py-5">
-        <button class="button" type="submit" id="btn-brillo" style="--clr:#8A7DFD" class='btn btn-primary btn-lg'>
+        <button class="button" type="submit" id="btn-brillo" style="--clr:#8A7DFD" class="btn btn-primary btn-lg">
             <span> BRILLO </span>
             <i></i>
         </button>
@@ -43,7 +43,7 @@
 
     <!--Btn Sonido-->
     <div class="mx-5 py-5">
-        <button class="button" type="submit" id="btn-sonido" style="--clr:#8A7DFD" class='btn btn-primary btn-lg'>
+        <button class="button" type="submit" id="btn-sonido" style="--clr:#8A7DFD" class="btn btn-primary btn-lg">
             <span> SONIDO </span>
             <i></i>
         </button>
@@ -51,7 +51,11 @@
 
     <!--Btn Controles-->
     <div class="mx-5 py-5">
-        <button class="button" type="submit" id="btn-controles" style="--clr:#8A7DFD" class='btn btn-primary btn-lg'>
+        <button class="button" 
+            type="submit" 
+            id="btn-controles" 
+            style="--clr:#8A7DFD" 
+            class="btn btn-primary btn-lg">
             <span> CONTROLES </span>
             <i></i>
         </button>
@@ -59,27 +63,25 @@
 
     <!--Btn Return-->
     <div class="mx-5 py-5">
-        <a class="button" type="submit" href="/" id="btn-return" style="--clr:#8A7DFD"
-            class='btn btn-primary btn-lg'>
+        <a class="button" type="submit" href="/" id="btn-return" style="--clr:#8A7DFD" class="btn btn-primary btn-lg">
             <span></span>
             <i id="#regreso"></i>
-            <i class='bx bx-undo'></i>
+            <i class="bx bx-undo"></i>
         </a>
     </div>
 
     <!--Btn Aceptar-->
     <div class="mx-5 py-5">
-        <button class="button" type="submit" id="btn-aceptar" onclick="aceptar()" style="--clr:#8A7DFD"
-            class='btn btn-primary btn-lg'>
+        <a class="button" type="submit" id="btn-aceptar" href="/" style="--clr:#8A7DFD"
+            class="btn btn-primary btn-lg">
             <span> ACEPTAR </span>
             <i></i>
-        </button>
+        </a>
     </div>
 
     <!--Btn Cancelar-->
     <div class="mx-5 py-5">
-        <a class="button" type="submit" id="btn-cancel" href="/" style="--clr:#8A7DFD"
-            class='btn btn-primary btn-lg'>
+        <a class="button" type="submit" id="btn-cancel" href="/" style="--clr:#8A7DFD" class="btn btn-primary btn-lg">
             <span> CANCELAR </span>
             <i></i>
         </a>
