--- a/src/app/views/mode.html
+++ b/src/app/views/mode.html
@@ -4,26 +4,34 @@
 
     <!--Btn Check Mate-->
     <div id="contain-mate">
-        <button class="button button-anim" onclick="modojuego()" id="btn-mate" style="--clr:#8A7DFD">
+        <a class="button button-anim" 
+            href="/dificulty" 
+            id="btn-checkmate"
+            value="checkmate"
+            style="--clr:#8A7DFD">
             <span>MODO JAQUE MATE</span>
             <i class="widget"></i>
-        </button>
+        </a>
     </div>
 
     <!--Btn Guerra Fría-->
     <div id="contain-guerra">
-        <button class="button button-anim" onclick="modojuego()" id="btn-guerra" style="--clr:#8A7DFD">
+        <a class="button button-anim" 
+            href="/dificulty" 
+            id="btn-coldwar" 
+            style="--clr:#8A7DFD"
+            value="coldwar">
             <span>MODO GUERRA FRÍA</span>
             <i class="widget"></i>
-        </button>
+        </a>
     </div>
 
     <!--Btn Return-->
     <div>
-        <button class="button" onclick="regresarJ()" id="btn-return" style="--clr:#8A7DFD">
+        <a class="button" href="/players" id="btn-return" style="--clr:#8A7DFD">
             <span></span>
             <i id="#regreso"></i>
             <i class='bx bx-undo'></i>
-        </button>
+        </a>
     </div>
 </div>
