--- a/src/app/views/scenario.html
+++ b/src/app/views/scenario.html
@@ -4,27 +4,27 @@
     <h2 class="title" style="margin-top: 10px"></h2>
 
     <div class="flex-container">
-        <div class="flex-item-desert">
+        <a class="flex-item-desert" href="/game" id="btn-desert" value="Desert">
             <div class="capa">
                 <h2></h2>
             </div>
-        </div>
-        <div class="flex-item-forest">
+        </a>
+        <a class="flex-item-forest" href="/game" id="btn-forest" value="Forest">
             <div class="capa">
                 <h2></h2>
             </div>
-        </div>
-        <div class="flex-item-snow">
+        </a>
+        <a class="flex-item-snow" href="/game" id="btn-snow" value="Snow">
             <div class="capa">
                 <h2></h2>
             </div>
-        </div>
+        </a>
     </div>
 </div>
 
 <!--Btn Return-->
-<button class="button" type="submit" onclick="regresarD();" id="btn-return" style="--clr:#8A7DFD">
+<a class="button" href="/dificulty" id="btn-return" style="--clr:#8A7DFD">
     <span></span>
     <i id="#regreso"></i>
     <i class='bx bx-undo'></i>
-</button>
+</a>
