--- a/src/app/views/score.html
+++ b/src/app/views/score.html
@@ -74,8 +74,8 @@
 </div>
 
 <!--Btn Return-->
-<button class="button" type="submit" onclick="regresar()" id="btn-return" style="--clr:#8A7DFD">
+<a class="button" href="/" id="btn-return" style="--clr:#8A7DFD">
     <span></span>
     <i id="#regreso"></i>
-    <i class='bx bx-undo'></i>
-</button>
+    <i class="bx bx-undo"></i>
+</a>
