--- a/src/app/views/home.html
+++ b/src/app/views/home.html
@@ -27,85 +27,88 @@
 <div class="home-content">
     <!--Bubbles-->
     <h1 class="title"></h1>
-        <div class="bubbles">
-            <span style="--i:11"></span>
-            <span style="--i:12"></span>
-            <span style="--i:24"></span>
-            <span style="--i:10"></span>
-            <span style="--i:14"></span>
-            <span style="--i:23"></span>
-            <span style="--i:18"></span>
-            <span style="--i:16"></span>
-            <span style="--i:19"></span>
-            <span style="--i:20"></span>
-            <span style="--i:22"></span>
-            <span style="--i:25"></span>
-            <span style="--i:18"></span>
-            <span style="--i:21"></span>
-            <span style="--i:15"></span>
-            <span style="--i:13"></span>
-            <span style="--i:26"></span>
-            <span style="--i:17"></span>
-            <span style="--i:13"></span>
-            <span style="--i:28"></span>
-            <span style="--i:11"></span>
-            <span style="--i:12"></span>
-            <span style="--i:24"></span>
-            <span style="--i:10"></span>
-            <span style="--i:14"></span>
-            <span style="--i:23"></span>
-            <span style="--i:18"></span>
-            <span style="--i:16"></span>
-            <span style="--i:19"></span>
-            <span style="--i:20"></span>
-            <span style="--i:22"></span>
-            <span style="--i:25"></span>
-            <span style="--i:18"></span>
-            <span style="--i:21"></span>
-            <span style="--i:15"></span>
-            <span style="--i:13"></span>
-            <span style="--i:26"></span>
-            <span style="--i:17"></span>
-            <span style="--i:13"></span>
-            <span style="--i:28"></span>
+    <div class="bubbles">
+        <span style="--i:11"></span>
+        <span style="--i:12"></span>
+        <span style="--i:24"></span>
+        <span style="--i:10"></span>
+        <span style="--i:14"></span>
+        <span style="--i:23"></span>
+        <span style="--i:18"></span>
+        <span style="--i:16"></span>
+        <span style="--i:19"></span>
+        <span style="--i:20"></span>
+        <span style="--i:22"></span>
+        <span style="--i:25"></span>
+        <span style="--i:18"></span>
+        <span style="--i:21"></span>
+        <span style="--i:15"></span>
+        <span style="--i:13"></span>
+        <span style="--i:26"></span>
+        <span style="--i:17"></span>
+        <span style="--i:13"></span>
+        <span style="--i:28"></span>
+        <span style="--i:11"></span>
+        <span style="--i:12"></span>
+        <span style="--i:24"></span>
+        <span style="--i:10"></span>
+        <span style="--i:14"></span>
+        <span style="--i:23"></span>
+        <span style="--i:18"></span>
+        <span style="--i:16"></span>
+        <span style="--i:19"></span>
+        <span style="--i:20"></span>
+        <span style="--i:22"></span>
+        <span style="--i:25"></span>
+        <span style="--i:18"></span>
+        <span style="--i:21"></span>
+        <span style="--i:15"></span>
+        <span style="--i:13"></span>
+        <span style="--i:26"></span>
+        <span style="--i:17"></span>
+        <span style="--i:13"></span>
+        <span style="--i:28"></span>
+    </div>
+
+    <div id="menu-buttons">
+        <!--Btn Start-->
+        <div id="contain-play">
+            <a class="button clikeable" href="/players" id="btn-play" style="--clr:#8A7DFD">
+                <span class="clickeable">JUGAR</span>
+                <i class="clickeable"></i>
+            </a>
         </div>
 
-        <div id="menu-buttons">
-            <!--Btn Start-->
-            <div id="contain-play">
-                <a class="button" type="submit" id="btn-play" style="--clr:#8A7DFD">
-                    <span>JUGAR</span>
-                    <i></i>
-                </a>
-            </div>
-                
-            <!--Btn Config-->
-            <div style="display:inline" id="contain-config">
-                <a href="/configuration" class="button" type="submit" id="btn-config" style="--clr:#8A7DFD; display: inline-block;">
-                    <span> </span>
-                    <i id="mov"></i>
-                    <i class="bx bx-cog"></i>
-                </a>
-            </div>
-                
-            <!--Btn Score-->
-            <div style="display:inline" id="contain-config">
-                <a href="/score" class="button" type="submit" id="btn-score" style="--clr:#8A7DFD; display: inline-block;">
-                    <span> </span>
-                    <i id="mov"></i>
-                    <i class="bx bx-trophy"></i>
-                </a>
-            </div>
-                
-            <!--Btn Usuario-->
-            <div style="display:inline" id="contain-usuario">
-                <a class="button" type="submit" id="btn-user" style="--clr:#8A7DFD; display: inline-block;">
-                    <span> </span>
-                    <i id="movu"></i>
-                    <i class="bx bx-user"></i>
-                </a>
-            </div>
+        <!--Btn Config-->
+        <div style="display:inline" id="contain-config">
+            <a href="/configuration" class="button clickeable" id="btn-config"
+                style="--clr:#8A7DFD; display: inline-block;">
+                <span class="clickeable"></span>
+                <i id="mov" class="clickeable"></i>
+                <i class="bx bx-cog clickeable"></i>
+            </a>
+        </div>
+
+        <!--Btn Score-->
+        <div style="display:inline" id="contain-config">
+            <a href="/score" class="button clickeable" id="btn-score" 
+                style="--clr:#8A7DFD; display: inline-block;">
+                <span class="clickeable"></span>
+                <i id="mov" class="clickeable"></i>
+                <i class="bx bx-trophy clickeable"></i>
+            </a>
+        </div>
+
+        <!--Btn Usuario-->
+        <div style="display:inline" id="contain-usuario">
+            <a class="button clickeable" id="btn-user" 
+                style="--clr:#8A7DFD; display: inline-block;">
+                <span class="clickeable"></span>
+                <i id="movu" class="clickeable"></i>
+                <i class="bx bx-user clickeable"></i>
+            </a>
         </div>
     </div>
-    <!--End Bubbles-->
+</div>
+<!--End Bubbles-->
 </div>
