--- a/src/app/views/home.html
+++ b/src/app/views/home.html
@@ -83,7 +83,7 @@
         <div style="display:inline" id="contain-config">
             <a href="/configuration" class="button clickeable" id="btn-config"
                 style="--clr:#8A7DFD; display: inline-block;">
-                <span class="clickeable"></span>
+                <span></span>
                 <i id="mov" class="clickeable"></i>
                 <i class="bx bx-cog clickeable"></i>
             </a>
@@ -93,7 +93,7 @@
         <div style="display:inline" id="contain-config">
             <a href="/score" class="button clickeable" id="btn-score" 
                 style="--clr:#8A7DFD; display: inline-block;">
-                <span class="clickeable"></span>
+                <span></span>
                 <i id="mov" class="clickeable"></i>
                 <i class="bx bx-trophy clickeable"></i>
             </a>
@@ -103,7 +103,7 @@
         <div style="display:inline" id="contain-usuario">
             <a class="button clickeable" id="btn-user" 
                 style="--clr:#8A7DFD; display: inline-block;">
-                <span class="clickeable"></span>
+                <span></span>
                 <i id="movu" class="clickeable"></i>
                 <i class="bx bx-user clickeable"></i>
             </a>
