--- a/src/app/views/players.html
+++ b/src/app/views/players.html
@@ -1,15 +1,14 @@
 <div class="bubbles-circle"></div>
 <div class="container-box">
+
     <h2 class="title"></h2>
 
     <!--Btn Singleplayer-->
     <div id="contain-player">
         <a class="button button-anim" 
             id="btn-singleplayer" 
-            style="--clr:#8A7DFD" 
             href="/mode"
-            value="singleplayer"
-        >
+            value="singleplayer">
             <span><i class="bx bx-user"></i> 1 JUGADOR</span>
             <i class="widget"></i>
         </a>
@@ -18,11 +17,9 @@
     <!--Btn MultiPlayer-->
     <div id="contain-multi">
         <a class="button button-anim" 
-            id="btn-multiplayer" 
-            style="--clr:#8A7DFD"
+            id="btn-multiplayer"
             href="/mode"
-            value="multiplayer"
-        >
+            value="multiplayer">
             <span><i class="bx bx-group"></i> MULTIJUGADOR</span>
             <i class="widget"></i>
         </a>
@@ -36,4 +33,7 @@
             <i class="bx bx-undo"></i>
         </a>
     </div>
+
+    <input type="text" name="" id="" class="form-control border-0 mx-5">
+
 </div>
