--- a/src/app/index.html
+++ b/src/app/index.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HexChess</title>
-
-    <link href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Silkscreen&display=swap" rel="stylesheet">
+    <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
-    <section id="root"></section>
+    <main id="root">Habilita JavaScript en tu navegador para disfrutar de la experiencia</main>
 </body>
 </html>
