--- a/src/app/styles/players.css
+++ b/src/app/styles/players.css
@@ -1,9 +1,3 @@
-.container-box {
-    position: absolute;
-    text-align: center;
-    width: 100%;
-}
-
 body {
     transition: all 0.3s;
 }
@@ -33,6 +27,15 @@ body::after {
     letter-spacing: 0.1em;
     padding: 10px 30px;
     margin-bottom: 150px;
+    --clr: #8A7DFD;
+}
+
+[type="text"] {
+    font-size: 2em;
+    font-family: 'Silkscreen', cursive;
+    border: none;
+    text-transform: uppercase;
+    border-radius: 0;
 }
 
 /*Btn-MultiPlayer*/
@@ -43,6 +46,7 @@ body::after {
     padding: 10px 30px;
     margin-top: -150px;
     margin-bottom: 150px;
+    --clr: #8A7DFD;
 }
 
 /*Btn-Return*/
