--- a/src/app/styles/styles.css
+++ b/src/app/styles/styles.css
@@ -87,9 +87,10 @@ h2 {
     width: 20px;
     left: 15%;
 }
-
+/*
 .container-box {
     position: relative;
     text-align: center;
     width: 100%;
 }
+*/
